--- a/GB840_In_Class_Activity_3_15_24.ipynb
+++ b/GB840_In_Class_Activity_3_15_24.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNPNzmXDbdxHETfLf9CjUMZ",
+      "authorship_tag": "ABX9TyNEVpsxkrRpX35jptvFLNVu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,6 +30,11 @@
       "cell_type": "markdown",
       "source": [
         "# My name is Neha Valluri\n",
+        "# Christine Serauskas forgot her laptop so we worked on this together! :)\n",
+        "*   List item\n",
+        "*   List item\n",
+        "\n",
+        "\n",
         "\n",
         "This is my Jupyter notebook."
       ],
@@ -45,7 +50,7 @@
       "metadata": {
         "id": "LeypP7gh7y_X"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -57,7 +62,7 @@
       "metadata": {
         "id": "_0AkfwsG7954"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -72,7 +77,7 @@
         "id": "rAACjgcJ8MNu",
         "outputId": "6f6e0975-5989-4b7c-a72a-d7fbb57ab4ea"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -99,7 +104,7 @@
         "id": "WWz_NhKh8OwR",
         "outputId": "fc7e4c57-8564-4663-d709-803c7f8f96c3"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -412,7 +417,7 @@
         "id": "DoGbXt-m8a-R",
         "outputId": "3a80478c-547e-422e-c35e-ea999c9fd9fe"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
